# k8s-workflow-deploy

./: .gitignore  .pants-ignore  Cargo.toml  DEVELOPMENT.md  Dockerfile  README.md  default.json  deny.toml  release.sh
.cargo/: audit.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml  release.yml
chart/: Chart.yaml  README.md  values.yaml
chart/templates/: _helpers.tpl  config.yml  crd.tpl  deployment.yaml  rbac.yml
integration/: README.md
integration/k8s-resources/: foo.yml  statsd.yml  workflow_standard.yml
k8s-resources/: deployment.yml  ns.yml  rbac.yml  serviceaccount.yml  workflow_standard.yml
src/: action.rs  action_loop.rs  config.rs  context.rs  crd.rs  crd_storage.rs  k8s_util.rs  main.rs  metrics.rs  reconcile.rs  watch_deployment.rs  watch_namespace.rs  watch_workflow.rs  when.rs
