[package]
name = "k8s-workflow-deploy"
description = "WIP A worfklow based deployment scheduler"
version = "0.1.0"
edition = "2021"
authors = ["Nick Gerakines <nick.gerakines@gmail.com>"]
license = "MIT"
publish = false

[features]
default = ["v1_26"]
v1_26 = ["k8s-openapi/v1_26"]
v1_25 = ["k8s-openapi/v1_25"]
v1_24 = ["k8s-openapi/v1_24"]
v1_23 = ["k8s-openapi/v1_23"]
v1_22 = ["k8s-openapi/v1_22"]
v1_21 = ["k8s-openapi/v1_21"]
v1_20 = ["k8s-openapi/v1_20"]

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
async-trait = {version = "0.1"}
chrono = "0.4.24"
config = "0.13.3"
fnv = "1.0.7"
futures = "0.3.28"
futures-util = "0.3.28"
json-patch = "1.0.0"
k8s-openapi = { version = "0.19.0", default-features = false, features = ["api"] }
kube = { version = "0.82.2", default-features = false, features = ["rustls-tls", "client", "runtime", "derive"] }
parking_lot = "0.12"
schemars = "0.8.12"
serde = {version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"
serde_yaml = "0.9.21"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
cadence = "0.29.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
